<resources>
    <string name="app_name">Daily Tools</string>
    <string name="hello_world">Hello world</string>
    <string name="happy_birthday_text">Happy Birthday, Sam!</string>
    <string name="signature_text">From Emma</string>
    <string name="roll">Roll</string>
    <string name="dice_rolled">Dice Rolled!</string>
    <string name="birthday_card">Birthday Card</string>
    <string name="lemonade">Lemonade</string>
    <string name="lemon_select">Click to select a lemon!</string>
    <string name="lemon_squeeze">Click to juice the lemon!</string>
    <string name="lemon_drink">Click to drink your lemonade!</string>
    <string name="lemon_empty_glass">Click to start again!</string>
    <string name="squeeze_count">Squeeze count: %1$d, keep squeezing!</string>
    <string name="tip_computer_text">Tip Computer</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="affirmations_text">Affirmations</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="dog_text">Dogglers</string>
    <string name="dog_age">Age: %1$s</string>
    <string name="dog_hobbies">Hobbies: %1$s</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="grid">Grid</string>
    <string name="words_text">Words</string>
    <string name="word_list_fragment_label">Words That Start With {letter}</string>
    <string name="action_switch_layout">Switch Layout</string>
    <string name="look_up_word">Look up word in a Browser Search</string>
    <string name="look_up_words">Show Stored Words</string>
    <string name="dessert_sold">Desserts Sold</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="desserts_text">Desserts</string>
    <string name="unscramble_text">Unscramble</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One Cupcake</string>
    <string name="six_cupcakes">Six Cupcakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <string name="cupcake_text">Cupcake</string>
    <string name="mars__photos_text">Mars Photos</string>
    <string name="bus_schedule_text">Bus Schedule</string>
    <string name="bus_stop_header">Stop Name</string>
    <string name="arrival_time_header">Arrival Time</string>
    <string name="inventory_text">Inventory</string>
    <string name="sell">Sell</string>
    <string name="inventory_quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>